@@ -86,6 +86,8 @@ VERSION 2.6-Beta 1
       "1.2 GB free" is shown instead of "85% used"; thicker capacity bar.
 
   BUGFIXES:
+    * Lyrics applet scrolls more intelligently. Patch by Alexander Potashev.
+      (BR 283601)
     * Fix crash on startup related to ContextView. (BR 258741)
     * Fix dragging of "No Labels" and "Various Artists" collection tree items.
     * Don't add duplicates to playlist when dragging from collection. (BR 254411)
